AppWeb/backend/system_errors.log

================================================================================
ERROR: 2026-01-30 12:34:56
Type: ModuleNotFoundError
Message: No module named 'flask_cors'
Traceback:
Traceback (most recent call last):
  File "C:\Users\pc\Desktop\Astroweb\AppWeb\backend\run.py", line 181, in <module>
    from app import create_app
  File "C:\Users\pc\Desktop\Astroweb\AppWeb\backend\app\__init__.py", line 8, in <module>
    from flask_cors import CORS
ModuleNotFoundError: No module named 'flask_cors'
================================================================================

================================================================================
ERROR: 2026-01-30 12:35:34
Type: ModuleNotFoundError
Message: No module named 'exifread'
Traceback:
Traceback (most recent call last):
  File "C:\Users\pc\Desktop\Astroweb\AppWeb\backend\run.py", line 186, in <module>
    app, login_manager = create_app()
                         ~~~~~~~~~~^^
  File "C:\Users\pc\Desktop\Astroweb\AppWeb\backend\app\__init__.py", line 111, in create_app
    from .routes.merchandisers import merchandisers_bp
  File "C:\Users\pc\Desktop\Astroweb\AppWeb\backend\app\routes\merchandisers.py", line 6, in <module>
    from app.utils.exif_helper import extract_metadata, extract_metadata_with_fallback
  File "C:\Users\pc\Desktop\Astroweb\AppWeb\backend\app\utils\exif_helper.py", line 2, in <module>
    import exifread
ModuleNotFoundError: No module named 'exifread'
================================================================================

================================================================================
ERROR: 2026-02-03 20:16:43
Type: IndentationError
Message: unindent does not match any outer indentation level (__init__.py, line 155)
Traceback:
Traceback (most recent call last):
  File "C:\Users\pc\Desktop\Astroweb\AppWeb\backend\run.py", line 181, in <module>
    from app import create_app
  File "C:\Users\pc\Desktop\Astroweb\AppWeb\backend\app\__init__.py", line 155
    try:
        ^
IndentationError: unindent does not match any outer indentation level
================================================================================

================================================================================
ERROR: 2026-02-03 20:18:00
Type: SyntaxError
Message: expected 'except' or 'finally' block (__init__.py, line 162)
Traceback:
Traceback (most recent call last):
  File "C:\Users\pc\Desktop\Astroweb\AppWeb\backend\run.py", line 181, in <module>
    from app import create_app
  File "C:\Users\pc\Desktop\Astroweb\AppWeb\backend\app\__init__.py", line 162
    return app, login_manager
    ^^^^^^
SyntaxError: expected 'except' or 'finally' block
================================================================================
